# zef

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  INSTALLmd  LICENSE  LICENSE.md  README.md  add_licenses.sh  addlicense.sh  compile_for_local_dev.ps1  compile_for_local_dev.sh  error_ideas.py  get_zeftypes.py  make_cleanslate.sh  make_everything.sh  requirements.txt  requirements_build.txt  run_cog_gen.py  setup.py  setup_tools_wrapper.sh  zeftypes_bootstrap_EN.json  zeftypes_bootstrap_ET.json  zz_build_wheel_py39.sh
core/: CMakeLists.txt  auth.html  make_debug.sh  requirements_build.txt  zefDBConfig.cmake.in
core/include/: append_structures.h  base64.hpp  blobs.h  blobs.h.AET_enum.cog  blobs.h.AET_qfloat.cog  blobs.h.AET_qint.cog  blobs.h.ET.cog  blobs.h.KW.cog  blobs.h.RT.cog  constants.h  conversions.h  export_statement.h  export_statement.h.in  external_handlers.h  from_json.h  fwd_declarations.h  graph.h  high_level_api.h  include_fs.h  julia_conversions.h  low_level_api.h  mmap.h  mmap_common.h  mmap_unix.h  mmap_windows.h  observable.h  ops_imperative.h  revise.h  scalars.h  synchronization.h  tar_file.h  tensor.h  tokens.h  tools.h  transaction.h  uids.h  verification.h  xxhash64.h  zefDB.h  zefDB_utils.h  (+7 more)
core/include/butler/: auth.h  auth_server.h  butler.h  butler.hpp  butler_zefhub.h  communication.h  locking.h  messages.h  msgqueue.h  threadsafe_map.h  utils.h
core/scripts/: Dockerfile.build_test  Dockerfile.build_wheel  run_cog_gen.py  setup_tools_prep.sh  zz_build_wheel_py39.sh  zz_only_if_gh_breaks_build_wheel.sh
core/src/: blobs.cpp  blobs.cpp.ENnames.cog  blobs.cpp.ETnames.cog  blobs.cpp.KW.cog  blobs.cpp.KWnames.cog  blobs.cpp.RTnames.cog  conversions.cpp  doctest_stub.cpp  external_handlers.cpp  from_json.cpp  globals.cpp  graph.cpp  graph.cpp.AETenumfromstring.cog  graph.cpp.AETquantityfloatfromstring.cog  graph.cpp.AETquantityfromstring.cog  graph.cpp.AETquantityintfromstring.cog  graph.cpp.stringfromAET.cog  high_level_api.cpp  low_level_api.cpp  mmap.cpp  mmap_common.cpp  mmap_unix.cpp  mmap_windows.cpp  observable.cpp  ops_imperative.cpp  revise.cpp  scalars.cpp  synchronization.cpp  synchronization_applies.cpp  tar_file.cpp  tensor.cpp  tokens.cpp  tools.cpp  transaction.cpp  uids.cpp  verification.cpp  zef_config.cpp  zef_zstd_interface.cpp  zefops.cpp  zefref.cpp  (+1 more)
core/src/butler/: auth.cpp  auth_server.cpp  butler.cpp  butler_connection.cpp  butler_handlers_graph_manager.cpp  butler_handlers_main.cpp  butler_handlers_ws.cpp  butler_tasks.cpp  butler_test.cpp  butler_update_payloads.cpp  butler_zefhub.cpp  communication.cpp  graphs.cpp  threadsafe_map.cpp
core/src/scratch/: const_iterator.cpp  custom_allocator.h  custom_hash_fct_for_umap.cpp  custom_ranges_iterable.h  dynamic_zefops.cpp  dynamic_zefops_old.cpp  enum_mod_gymnastics.cpp  flat_graph.cpp  from_hex.cpp  iterable_class.h  mmap_basic.cpp  range_sentinel.h  ranges_eg2.h  ranges_map.cpp  ranges_v3.h  recursive_templating.cpp  scratch.cpp  span.h  std_initializer_list.cpp  string_parsing.cpp  templating_check_if_attribute_exists.h  variable_arguments_fct.cpp  variadic_template.cpp  variant_visit_problem.cpp  zef_tensor.cpp  zef_tensor_contiguous.cpp  zef_time.cpp  zeflog.cpp  zuple.cpp  zwitch.cpp
core/src_cpp/c_tests/: CMakeLists.txt
core/src_cpp/core/: CMakeLists.txt  core.vcxproj
core/test_windows/: CMakeLists.txt  test_windows.cpp
python/: .gitattributes  MANIFEST.in  _version.py  build_wheels.sh  lookforzef.cmake  pyproject.toml  requirements.txt  setup.cfg  setup.py  versioneer.py
python/build_python_package/: build_python_package.vcxproj  common.h
python/pyzef/: CMakeLists.txt  CMakeLists2.txt  LICENSE.pybind11  LICENSE.pybind_json  build_zefDB.cpp  common.h  internals.cpp  zefops.cpp
python/tests/: quick_start.py  rem_test_slices.py  requirements_tests.txt  test_atom.py  test_attach.py  test_bugs.py  test_core_VTs.py  test_delegate_edge.py  test_encode.py  test_enum.py  test_flatgraph.py  test_func.py  test_graph_additions.py  test_graph_delta.py  test_http.py  test_info_graph.py  test_local_file.py  test_no_simul_transactions.py  test_nx_wrapper.py  test_oldstyle.py  test_partial_graph.py  test_schema.py  test_serialization.py  test_simplegql.py  test_slices.py  test_stringification.py  test_subscribe.py  test_to_frame.py  test_tx_linking.py  test_value_nodes.py  test_zefref_info.py
python/tests/benchmarking/: benchmark_filter.py
python/tests/mmap/: separate_allocs.cpp
python/tests/robot/: runtests.sh
python/tests/threading/: random_graph_spamming.py
python/zef/: __init__.py  _version.py  circular_imports.py
python/zef/core/: __init__.py  _bytes.py  _core.py  _decimal.py  _error.py  _image.py  _ops.py  abstract_raes.py  atom.py  bytes.py  colors.py  decimal.py  delegates.py  error.py  flat_graph.py  generators.py  graph_delta.py  graph_delta_old.py  graph_events.py  graph_slice.py  image.py  logger.py  namespaces.py  op_structs.py  overrides.py  patching.py  pure_utils.py  rae_type_definitions.py  serialization.py  streams.py  symbolic_expression.py  units.py  user.py  user_value_type.py  z_expression.py  z_field.py  zef_functions.py  zef_rich.py
python/zef/deprecated/: list_matrix_set.py  zef_script_edit.py
python/zef/experimental/: networkx.py  repl_interface.py  sql_import.py  subgraph.py
python/zef/gql/: __init__.py  ariadne_utils.py  auto.py  generate_ariadne_resolvers.py  generate_gql_api.py  hardcoded_schema.py  playground.html  resolvers_utils.py  schema_file_to_graph.py  schema_graph_to_file.py  value_gql.py
python/zef/graphql/: __init__.py  resolvers_generator.py  schema_generator.py  schema_parser.py
python/zef/ops/: __init__.py  _config.py  _values.py  privileges.py  transactor_role.py
python/zef/ui/: __init__.py  components.py  visualizations.py  zef_rich.py
src_cpp/core/: CMakeLists.txt  auth.html  core.vcxproj.filters
src_cpp/core/butler/: test_network.cpp  test_wholefilemapping.cpp
src_cpp/core/include/: append_structures.h  blobs.h  (+17 more)
(+328 files in other folders)
