[tool.cibuildwheel]
skip = ["pp*", "*musllinux*"]
archs = ["auto64"]
before-test = "python -mpip install -r {project}/python/tests/requirements_tests.txt"
test-command = "bash {project}/scripts/assert_no_created_tokens.sh && ZEFHUB_AUTH_KEY=GUEST ZEFDB_QUIET=YES python -mpytest {project}/python/tests && python {project}/python/tests/quick_start.py"

[tool.cibuildwheel.linux]
before-all = "yum install -y openssl-devel"

[tool.cibuildwheel.macos]
before-all = "brew install openssl"

[tool.cibuildwheel.windows]
test-command = "set \"ZEFHUB_AUTH_KEY=GUEST\" && set \"ZEFDB_QUIET=YES\" && python -mpytest {project}/python/tests && python {project}/python/tests/quick_start.py"
# test-command = ""

[build-system]
# TODO: Get rid of these deps from the libzef part
requires = ["setuptools", "cmake", "pybind11", "cogapp", "pyfunctional"]
build-backend = "setuptools.build_meta"