[tool.cibuildwheel]
skip = ["pp*", "*musllinux*"]
archs = ["auto64"]
before-test = "python -mpip install -r {project}/python/tests/requirements_tests.txt"
test-command = "export ZEFDB_QUIET=YES && bash {project}/scripts/assert_no_created_tokens.sh && ZEFHUB_AUTH_KEY=GUEST python -mpytest {project}/python/tests && python {project}/python/tests/quick_start.py && cd {project}/python/tests/robot && bash runtests.sh yes"

[tool.cibuildwheel.linux]
before-all = "ulimit -n 1024 && yum install -y openssl-devel graphviz"
environment-pass = ["ZEFHUB_AUTH_KEY"]

[tool.cibuildwheel.macos]
before-all = "brew install openssl graphviz"

[tool.cibuildwheel.windows]
test-command = "set \"ZEFHUB_AUTH_KEY=GUEST\" && set \"ZEFDB_QUIET=YES\" && set \"ZEF_ERROR_HANDLING=FALSE\" && python -mpytest {project}/python/tests && python {project}/python/tests/quick_start.py"
# test-command = ""

[build-system]
# TODO: Get rid of these deps from the libzef part
requires = ["setuptools", "cmake", "pybind11", "cogapp", "pyfunctional"]
build-backend = "setuptools.build_meta"