
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = zef/_version.py
versionfile_build = zef/_version.py
tag_prefix = pyzef-
#parentdir_prefix =


[libzef]
#location = ../config
#kind = guess

[metadata]
name = zef
author = zefhub.io
author_email = hello@zefhub.io
description = A data-oriented toolkit for graph data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zefhub/zef
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0
    Operating System :: OS Independent